hard-gists/217bfb7e54c6f75b9b1b2b3d73a1a43a/run.log
=== Docker Run Log for 217bfb7e54c6f75b9b1b2b3d73a1a43a ===
Started at: Mi 29. Okt 13:00:18 CET 2025

[2025-10-29 13:00:19] START: Running container for 217bfb7e54c6f75b9b1b2b3d73a1a43a
[2025-10-29 13:00:19] SUCCESS: Container a9ca10dd403cd5d733c61d8b8b5ae7e2422bcc8ae3717ddfe9856c1b9d76d838 started for 217bfb7e54c6f75b9b1b2b3d73a1a43a
=== Container logs for 217bfb7e54c6f75b9b1b2b3d73a1a43a ===
  File "/snippet.py", line 50
    exec pyc in frame
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'exec'. Did you mean exec(...)?
=== End of logs for 217bfb7e54c6f75b9b1b2b3d73a1a43a ===
[2025-10-29 13:00:21] INFO: Container a9ca10dd403cd5d733c61d8b8b5ae7e2422bcc8ae3717ddfe9856c1b9d76d838 has stopped
